NR S02: Neater way to check that there's not a cave wall between Tallin and Hamel

--- a/data/campaigns/Northern_Rebirth/scenarios/02_01_Infested_Caves.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/02_01_Infested_Caves.cfg
@@ -916,9 +916,10 @@
                     id=Hamel
                 [/filter]
                 radius=5
+                [filter_radius]
+                    terrain=!,X*
+                [/filter_radius]
             [/filter_location]
-            x=24-34
-            y=21-30
         [/filter]
 
         [message]
