THoT: add masked berserker defend animation

--- a/data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Berserker.cfg
+++ b/data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Berserker.cfg
@@ -23,7 +23,7 @@
             image="units/masked_berserker-bob[1~6].png:200"
         [/frame]
     [/standing_anim]
-    {DEFENSE_ANIM "units/masked_berserker.png" "units/masked_berserker.png" {SOUND_LIST:DWARF_HIT} }
+    {DEFENSE_ANIM "units/masked_berserker-defend-2.png" "units/masked_berserker-defend-1.png" {SOUND_LIST:DWARF_HIT} }
     [defense]
         hills=60
         mountains=50
