EI: show objectives after objective updating events

--- a/data/campaigns/Eastern_Invasion/scenarios/10_Lake_Vrug.cfg
+++ b/data/campaigns/Eastern_Invasion/scenarios/10_Lake_Vrug.cfg
@@ -307,6 +307,8 @@
             name=enemies_defeated
             value=yes
         [/set_variable]
+
+        [show_objectives][/show_objectives]
     [/event]
 
     # Check each turn if the victory conditions have been met
