--- a/data/campaigns/Legend_of_Wesmere/_main.cfg
+++ b/data/campaigns/Legend_of_Wesmere/_main.cfg
@@ -61,6 +61,7 @@
 
     [event]
         name=unit placed
+        first_time_only=no
         [filter]
             type=Dwarvish Fighter
         [/filter]
