THoT: renumber scenarios and add lines for Movrur

--- a/data/campaigns/The_Hammer_of_Thursagan/scenarios/03_Strange_Allies.cfg
+++ b/data/campaigns/The_Hammer_of_Thursagan/scenarios/03_Strange_Allies.cfg
@@ -5,7 +5,7 @@
     name= _ "Strange Allies"
     map_data="{campaigns/The_Hammer_of_Thursagan/maps/03_Strange_Allies.map}"
     {TURNS 30 28 24}
-    next_scenario=04_Troll_Bridge
+    next_scenario=04_Invaders
     victory_when_enemies_defeated=yes
 
     {DEFAULT_SCHEDULE}
@@ -20,7 +20,7 @@
             music=loyalists.ogg
             # po: 'march' is *not* a typo for 'marsh' here. In archaic English, 'march' means 'border'.
             # po: The same word, as '-mark', is in the name of 'the Estmarks': the hills of the eastern border.
-            story= _ "Angarthing and Aiglondur and the dwarvish troop traveled swiftly to the east through the settled lands of the Northern Alliance. Soon enough they came to the wilder march country, where raids by large bands of hostile orcs and men were all too common."
+            story= _ "Angarthing, Aiglondur, Movrur, and the dwarvish troop traveled swiftly to the east through the settled lands of the Northern Alliance. Soon enough they came to the wilder march country, where raids by large bands of hostile orcs and men were all too common."
         [/part]
     [/story]
 
@@ -149,6 +149,10 @@
                 condition=lose
             [/objective]
             [objective]
+                description= _ "Death of Movrur"
+                condition=lose
+            [/objective]
+            [objective]
                 description= _ "Death of Marth-Tak"
                 condition=lose
             [/objective]
@@ -166,11 +170,32 @@
             x,y=5,12
         [/recall]
 
+        [recall]
+            id=Movrur
+            x,y=5,11
+        [/recall]
+
         {MODIFY_UNIT (side=1) facing se}
     [/event]
 
     [event]
         name=start
+
+        [message]
+            speaker=Aiglondur
+            message= _ "Movrur, I had meant to ask you this before, but why do you wear a mask?"
+        [/message]
+
+        [message]
+            speaker=Movrur
+            # note, Movrur is half lying here, there's obviously another reason they wear masks (Karrag)
+            message= _ "Kal Kartha is the stronghold of numerous, ancient forges. We are at home in deep firepits, as smiths and craftsmen. The mask is a sign of our mastery of the forge."
+        [/message]
+
+        [message]
+            speaker=Angarthing
+            message= _ "And more practically, it shields the face from flying sparks and molten steel. Even the forgemasters of Knalga don the mask, though perhaps not as continuously as our friend Movrur does. But we have no time to discuss this further right now; I see trouble brewing down the road!"
+        [/message]
 
         [message]
             speaker=Marth-Tak
@@ -266,4 +291,5 @@
 
     {HERODEATH_AIGLONDUR}
     {HERODEATH_ANGARTHING}
+    {HERODEATH_MOVRUR}
 [/scenario]
