--- a/data/campaigns/The_Hammer_of_Thursagan/scenarios/05_Fear.cfg
+++ b/data/campaigns/The_Hammer_of_Thursagan/scenarios/05_Fear.cfg
@@ -1,11 +1,11 @@
 #textdomain wesnoth-thot
 
 [scenario]
-    id=08_Fear
+    id=05_Fear
     name= _ "Fear"
-    map_data="{campaigns/The_Hammer_of_Thursagan/maps/08_Fear.map}"
+    map_data="{campaigns/The_Hammer_of_Thursagan/maps/05_Fear.map}"
     {TURNS 30 25 20}
-    next_scenario=09_Forbidden_Forest
+    next_scenario=06_Forbidden_Forest
     victory_when_enemies_defeated=yes
 
     {DEFAULT_SCHEDULE}
@@ -14,7 +14,7 @@
     {EXTRA_SCENARIO_MUSIC knalgan_theme.ogg}
     {EXTRA_SCENARIO_MUSIC battle.ogg}
 
-    {THOT_TRACK {JOURNEY_STAGE8}}
+    {THOT_TRACK {JOURNEY_STAGE5}}
 
     {PLACE_IMAGE ("scenery/village-human-burned1.png") 36 8}
     {PLACE_IMAGE ("scenery/village-human-burned2.png") 33 13}
@@ -65,13 +65,13 @@
         # We only want a limited number of these anyway, for flavor; they are
         # way too dangerous in swarms.  So we'll create them explicitly here.
 
-        {UNIT 2 "Dwarvish Ulfserker" 8 12 generate_name=no}
-        {UNIT 2 "Dwarvish Ulfserker" 39 14 generate_name=no}
+        {UNIT 2 "Dwarvish Masked Ulfserker" 8 12 generate_name=no}
+        {UNIT 2 "Dwarvish Masked Ulfserker" 39 14 generate_name=no}
 #ifndef EASY
-        {UNIT 2 "Dwarvish Ulfserker" 40 12 generate_name=no}
+        {UNIT 2 "Dwarvish Masked Ulfserker" 40 12 generate_name=no}
 #endif
 #ifdef HARD
-        {UNIT 2 "Dwarvish Ulfserker" 39 12 generate_name=no}
+        {UNIT 2 "Dwarvish Masked Ulfserker" 39 12 generate_name=no}
 
         [unit]
             type=Dwarvish Masked Steelclad
@@ -115,6 +115,10 @@
                 description= _ "Death of Angarthing"
                 condition=lose
             [/objective]
+            [objective]
+                description= _ "Death of Movrur"
+                condition=lose
+            [/objective]
 
             {TURNS_RUN_OUT}
 
@@ -129,21 +133,11 @@
         [/recall]
 
         [recall]
-            id=Ratheln
-        [/recall]
-
-        [recall]
-            id=Darchas
-        [/recall]
-
-        [recall]
-            id=Lorinne
+            id=Movrur
         [/recall]
 
         {MODIFY_UNIT (side=1) facing ne}
     [/event]
-
-    {CONDITIONAL_MAGE_RECRUITING}
 
     [event]
         name=start
@@ -159,8 +153,8 @@
         [/message]
 
         [message]
-            speaker=Ratheln
-            message= _ "I do not sense hostile magic in the vicinity. But there has been fire near here recently, and not a clean one."
+            speaker=Movrur
+            message= _ "There has been fire near here recently, and not a clean one."
         [/message]
 
         [message]
@@ -369,7 +363,17 @@
 
         [message]
             speaker=Angarthing
-            message= _ "They were seeking captives. To what purpose, I cannot say, but I doubt it was any good one."
+            message= _ "They were seeking captives. To what purpose, I cannot say, but I doubt it was any good one. Movrur, do you know anything of these dwarves?"
+        [/message]
+
+        [message]
+            speaker=Movrur
+            message= _ "... No. It is the first time I have seen them. I know not from where they hail, but at least now they are vanquished."
+        [/message]
+
+        [message]
+            speaker=Angarthing
+            message= _ "Indeed they are..."
         [/message]
 
         [kill]
@@ -385,5 +389,5 @@
 
     {HERODEATH_AIGLONDUR}
     {HERODEATH_ANGARTHING}
-    {HERODEATH_RATHELN}
+    {HERODEATH_MOVRUR}
 [/scenario]
