--- a/data/campaigns/The_Hammer_of_Thursagan/scenarios/06_Forbidden_Forest.cfg
+++ b/data/campaigns/The_Hammer_of_Thursagan/scenarios/06_Forbidden_Forest.cfg
@@ -1,11 +1,11 @@
 #textdomain wesnoth-thot
 
 [scenario]
-    id=09_Forbidden_Forest
+    id=06_Forbidden_Forest
     name= _ "Forbidden Forest"
-    map_data="{campaigns/The_Hammer_of_Thursagan/maps/09_Forbidden_Forest.map}"
+    map_data="{campaigns/The_Hammer_of_Thursagan/maps/06_Forbidden_Forest.map}"
     {TURNS 40 34 28}
-    next_scenario=10_The_Siege_of_Kal_Kartha
+    next_scenario=07_The_Siege_of_Kal_Kartha
     victory_when_enemies_defeated=no
 
     {DEFAULT_SCHEDULE}
@@ -14,7 +14,7 @@
     {EXTRA_SCENARIO_MUSIC traveling_minstrels.ogg}
     {EXTRA_SCENARIO_MUSIC frantic.ogg}
 
-    {THOT_TRACK {JOURNEY_STAGE9}}
+    {THOT_TRACK {JOURNEY_STAGE6}}
 
     # wmllint: validate-off
     [side]
@@ -36,9 +36,6 @@
 
     # This tells the elves not to venture onto the plains
 
-    # Set up the Staff of Righteous Flame.
-    # Tell the AIs not to step on it so we don't have to deal
-    # with the case where a forest unit picks it up.
 #define AVOID
     [avoid]
         x=   0,   1,   2,    2,    2,   3,    3,  4,   4,    4,    5,22, 35, 36, 37,37, 38,38,   38,38, 39,  39,   39,   39,  40,   40,  41,   41
@@ -124,8 +121,6 @@
     {STARTING_VILLAGES 2 9}
     {STARTING_VILLAGES 3 9}
 
-    {OBJ_STAFF_OF_RIGHTEOUS_FLAME 22 16}
-
     {PLACE_IMAGE "scenery/signpost.png" 40 17}
 
     [event]
@@ -143,6 +138,10 @@
             [/objective]
             [objective]
                 description= _ "Death of Angarthing"
+                condition=lose
+            [/objective]
+            [objective]
+                description= _ "Death of Movrur"
                 condition=lose
             [/objective]
 
@@ -163,21 +162,11 @@
         [/recall]
 
         [recall]
-            id=Ratheln
-        [/recall]
-
-        [recall]
-            id=Darchas
-        [/recall]
-
-        [recall]
-            id=Lorinne
+            id=Movrur
         [/recall]
 
         {MODIFY_UNIT (side=1) facing se}
     [/event]
-
-    {CONDITIONAL_MAGE_RECRUITING}
 
     [event]
         name=start
@@ -299,7 +288,7 @@
         first_time_only=yes
         [message]
             speaker=Angarthing
-            message= _ "Kal Kartha should be only another day’s march east of here."
+            message= _ "Kal Kartha should be only another day’s march north of here."
         [/message]
     [/event]
 
@@ -342,7 +331,7 @@
 
     {HERODEATH_AIGLONDUR}
     {HERODEATH_ANGARTHING}
-    {HERODEATH_RATHELN}
+    {HERODEATH_MOVRUR}
 [/scenario]
 
 #undef AVOID
