--- a/data/campaigns/The_Hammer_of_Thursagan/scenarios/07_The_Siege_of_Kal_Kartha.cfg
+++ b/data/campaigns/The_Hammer_of_Thursagan/scenarios/07_The_Siege_of_Kal_Kartha.cfg
@@ -1,11 +1,11 @@
 #textdomain wesnoth-thot
 
 [scenario]
-    id=10_The_Siege_of_Kal_Kartha
+    id=07_The_Siege_of_Kal_Kartha
     name= _ "The Siege of Kal Kartha"
-    map_data="{campaigns/The_Hammer_of_Thursagan/maps/10_The_Siege_of_Kal_Kartha.map}"
+    map_data="{campaigns/The_Hammer_of_Thursagan/maps/07_The_Siege_of_Kal_Kartha.map}"
     turns=35
-    next_scenario=11_The_Court_of_Karrag
+    next_scenario=08_The_Court_of_Karrag
     victory_when_enemies_defeated=yes
 
     {DEFAULT_SCHEDULE}
@@ -20,7 +20,7 @@
     {EXTRA_SCENARIO_MUSIC loyalists.ogg}
     {EXTRA_SCENARIO_MUSIC northerners.ogg}
 
-    {THOT_TRACK {JOURNEY_STAGE10}}
+    {THOT_TRACK {JOURNEY_STAGE7}}
 
     # wmllint: validate-off
     [side]
@@ -223,6 +223,10 @@
                 condition=lose
             [/objective]
             [objective]
+                description= _ "Death of Movrur"
+                condition=lose
+            [/objective]
+            [objective]
                 description= _ "Death of Dulcatulos"
                 condition=lose
             [/objective]
@@ -240,27 +244,17 @@
         [/recall]
 
         [recall]
-            id=Ratheln
-        [/recall]
-
-        [recall]
-            id=Darchas
-        [/recall]
-
-        [recall]
-            id=Lorinne
+            id=Movrur
         [/recall]
 
         {MODIFY_UNIT (side=1) facing ne}
     [/event]
 
-    {CONDITIONAL_MAGE_RECRUITING}
-
     [event]
         name=start
 
         [message]
-            speaker=Angarthing
+            speaker=Movrur
             message= _ "Behold! The West Gate of Kal Kartha!"
         [/message]
 
@@ -321,33 +315,63 @@
         [/message]
 
         [message]
+            speaker=Movrur
+            message=_"<i>Dulcatulos, you dunce...</i>"
+        [/message]
+
+        [message]
+            speaker=Dulcatulos
+            message=_"<i>Did I say something I should have not?</i>"
+        [/message]
+
+        [message]
+            speaker=Movrur
+            message=_"<i>Never mind. I shall deal with you later.</i>"
+        [/message]
+
+        [message]
             speaker=Angarthing
             message=_"A runemaster? There have been none such since Thursagan’s day. And for one to lead a holding was unheard-of; they tended towards the solitary life."
         [/message]
 
         [message]
             speaker=Dulcatulos
-            message=_"Aye? Well, you’d know such things better than I, loremaster. Our Karrag toiled for long years to recover the craft lore. He was elevated when our old lord fell in battle against the besieging orcs. Karrag himself was wounded near to death; none thought he would recover. But he leads us today, and his runelore has oft been the only shield between us and the orcs."
+            message=_"Aye? Well, you’d know such things better than I, loremaster. Lord Karrag toiled for long years to recover the craft lore. He was elevated when our old lord fell in battle against the besieging orcs. Karrag himself was wounded near to death; none thought he would recover."
+        [/message]
+
+        [message]
+            speaker=Movrur
+            message=_"But he revived himself and stands with us now. That is all that matters."
         [/message]
 
         [message]
             speaker=Angarthing
-            message=_"He has grasped the Hammer of Thursagan, then?"
+            message=_"He has grasped the Hammer of Thursagan, then? Else I know not how he recovered the runelore of old."
         [/message]
 
         [message]
-            speaker=Dulcatulos
-            message=_"Aye. Toils over it in a workshop in the underlevels with his personal followers. He has promised all of us that the Hammer’s power will smash and scatter all our enemies."
+            speaker=Movrur
+            message=_"Aye. Shattered though the Hammer may be, it still retains some of its old power. With your knowledge and help, loremaster, we can reforge the hammer and use its power to smash all enemies that oppose us."
         [/message]
 
         [message]
             speaker=Angarthing
-            message=_"That is strange. The Hammer is a tool of crafting and making, not a weapon. What can he mean to do with it?"
+            message=_"The Hammer is a tool of crafting and making, not a weapon."
         [/message]
 
         [message]
             speaker=Dulcatulos
-            message=_"That’s for lords and loremasters to worry about, not the likes of me. I must see to my troop’s care. Food will be brought to you; rest well. We will speak again."
+            message=_"Is it not? Lord Karrag has wielded it in battle to great effect, even broken as it is."
+        [/message]
+
+        [message]
+            speaker=Movrur
+            message=_"<i>Stop speaking, you imbecile.</i> That would be the power of runecraft you witness. No fool would take a broken weapon into battle, much less a precious artifact like the Hammer. Karrag holds it as a symbol of his knowledge and mastery of lore, no more than that."
+        [/message]
+
+        [message]
+            speaker=Dulcatulos
+            message=_"Right, right. These things are for lords and loremasters to worry about, not the likes of me. I must see to my troop’s care. Food will be brought to you; rest well. We will speak again."
         [/message]
 
         [endlevel]
@@ -359,5 +383,5 @@
 
     {HERODEATH_AIGLONDUR}
     {HERODEATH_ANGARTHING}
-    {HERODEATH_RATHELN}
+    {HERODEATH_MOVRUR}
 [/scenario]
