--- a/data/campaigns/The_Hammer_of_Thursagan/scenarios/08_The_Court_of_Karrag.cfg
+++ b/data/campaigns/The_Hammer_of_Thursagan/scenarios/08_The_Court_of_Karrag.cfg
@@ -1,11 +1,11 @@
 #textdomain wesnoth-thot
 
 [scenario]
-    id=11_The_Court_of_Karrag
+    id=08_The_Court_of_Karrag
     name= _ "The Court of Karrag"
-    map_data="{campaigns/The_Hammer_of_Thursagan/maps/11_The_Court_of_Karrag.map}"
+    map_data="{campaigns/The_Hammer_of_Thursagan/maps/08_The_Court_of_Karrag.map}"
     turns=12
-    next_scenario=12_The_Underlevels
+    next_scenario=09_The_Underlevels
     victory_when_enemies_defeated=yes
 
     {UNDERGROUND}
@@ -25,7 +25,7 @@
     {EXTRA_SCENARIO_MUSIC revelation.ogg}
     {EXTRA_SCENARIO_MUSIC transience.ogg}
 
-    {THOT_TRACK {JOURNEY_STAGE11}}
+    {THOT_TRACK {JOURNEY_STAGE8}}
 
     # wmllint: validate-off
     [side]
@@ -57,13 +57,6 @@
         facing=sw
 
         # Karrag's throne guards
-        [unit]
-            type=Dwarvish Masked Steelclad
-            id=Gog
-            name= _ "Masked Dwarf"
-            x,y=16,10
-            facing=sw
-        [/unit]
 
         [unit]
             type=Dwarvish Masked Steelclad
@@ -74,7 +67,7 @@
         [/unit]
 
         [unit]
-            type=Dwarvish Ulfserker
+            type=Dwarvish Masked Ulfserker
             id=Hekyll
             name= _ "Masked Dwarf"
             x,y=15,10
@@ -82,7 +75,7 @@
         [/unit]
 
         [unit]
-            type=Dwarvish Ulfserker
+            type=Dwarvish Masked Ulfserker
             id=Jekyll
             name= _ "Masked Dwarf"
             x,y=15,13
@@ -167,25 +160,39 @@
         [/recall]
 
         [recall]
-            id=Ratheln
+            id=Movrur
         [/recall]
 
         {MODIFY_UNIT (side=1) facing se}
     [/event]
 
-    {CONDITIONAL_MAGE_RECRUITING}
-
     [event]
         name=start
 
+        [delay]
+            time=500
+        [/delay]
+
+        [message]
+            speaker=Movrur
+            message= _ "I shall go take my place by Lord Karrag. See to it that you offer him the respect that he is due."
+        [/message]
+
+        [move_unit]
+            id=Movrur
+            to_x,to_y=16,10
+        [/move_unit]
+        {MODIFY_UNIT (id=Movrur) side 2}
+        {MODIFY_UNIT (id=Movrur) facing sw}
+
         [message]
             speaker=Aiglondur
-            message={WHISPER ( _ "Psst, Angarthing... Karrag and those dwarves on the dais, they’re all <i>masked</i>.")}
+            message={WHISPER ( _ "Angarthing... I have a bad feeling about this.")}
         [/message]
 
         [message]
             speaker=Angarthing
-            message={WHISPER ( _ "I see it. There is something very wrong here.")}
+            message={WHISPER ( _ "Indeed. There is something very wrong here.")}
         [/message]
 
         [message]
@@ -200,27 +207,27 @@
 
         [message]
             speaker=Karrag
-            message= _ "All dwarves are kin, and must prevail against orcs and humans and other dirtgrubbers. You can be part of the fist that smites them."
+            message= _ "All dwarves are kin, and must prevail against orcs and humans and other dirtgrubbers. You can be part of the fist that smites them through the power of our ancient heirloom, the Hammer of Thursagan."
         [/message]
 
         [message]
             speaker=Angarthing
-            message= _ "We did not come to smite anyone, but to re-open contact and trade."
+            message= _ "We did not come to smite anyone, especially not using the most prized artifact of our heritage as a mere weapon."
         [/message]
 
         [message]
             speaker=Karrag
-            message= _ "Trade? Your destruction of the besieging orcs was a far nobler act than trade. There can be more such victories. And there will be by the power of our ancient heirloom, the Hammer of Thursagan."
+            message= _ "Weapon? No, no, loremaster... you mistake my intentions. You know, as well as I do, that the Hammer is hardly a paltry weapon. The Hammer holds the soul of the dwarves, the true people. It is that which forged our flesh and blood, that which binds our will and forges our resolve. It is a symbol of our superiority as the true people of Irdya, an image that the other races shall respect and fear!"
         [/message]
 
         [message]
             speaker=Angarthing
-            message= _ "It is remembered in Knalga that Kal Kartha holds the Hammer."
+            message= _ "... so... what are you suggesting?"
         [/message]
 
         [message]
             speaker=Karrag
-            message= _ "Yes! And the Hammer holds the soul of the dwarves, the true people. Together, we can march to greater victories! Will you of Knalga join me?"
+            message= _ "The Hammer is still incomplete; we need the knowledge of a loremaster to reforge the remaining shards and restore the artifact to its most powerful state. Once that is done, none will be able to stand before me! Join us, loremaster. We can put your talent to good use."
         [/message]
 
         [message]
@@ -229,8 +236,13 @@
         [/message]
 
         [message]
+            speaker=Movrur
+            message= _ "Impertinent cur! You dare—"
+        [/message]
+
+        [message]
             speaker=Karrag
-            message= _ "You... do not wish to see what is beneath this mask. I was terribly wounded in an orcish attack. Disfigured."
+            message= _ "Quiet, Movrur. Loremaster, you... do not wish to see what is beneath this mask. I was terribly wounded in an orcish attack. Disfigured."
         [/message]
 
         [message]
@@ -239,8 +251,8 @@
         [/message]
 
         [message]
-            speaker=Karrag
-            message= _ "Impertinent fool! It is not for you to dictate to a lord in his own holding, much less one who holds the very soul of the dwarves in his hand."
+            speaker=Movrur
+            message= _ "Master, you need not answer to this fool. Even for a loremaster, to dictate to a lord in his own holding... and one who holds the very soul of the dwarves in his hand. It is unthinkable!"
         [/message]
 
         [message]
@@ -248,9 +260,18 @@
             message= _ "The Law speaks. Against him with the eyes to see, no deception can hold. I AM A WITNESS!"
         [/message]
 
+        [message]
+            speaker=Movrur
+            message= _ "Master—"
+        [/message]
+
         [scroll_to_unit]
             id=Karrag
         [/scroll_to_unit]
+
+        [delay]
+            time=1500
+        [/delay]
 
         [transform_unit]
             id=Karrag
@@ -264,6 +285,10 @@
         [/sound]
 
         [redraw][/redraw]
+
+        [delay]
+            time=1500
+        [/delay]
 
         [message]
             speaker=Dulcatulos
@@ -330,6 +355,5 @@
 
     {HERODEATH_AIGLONDUR}
     {HERODEATH_ANGARTHING}
-    {HERODEATH_RATHELN}
     {HERODEATH_DULCATULOS}
 [/scenario]
