--- a/data/campaigns/The_Hammer_of_Thursagan/scenarios/01_At_the_East_Gate.cfg
+++ b/data/campaigns/The_Hammer_of_Thursagan/scenarios/01_At_the_East_Gate.cfg
@@ -133,12 +133,61 @@
 
         [message]
             speaker=second_unit
-            message= _ "What is this? Their vanquished leader wears a cloak-pin of dwarvish make. And it bears a loremaster’s emblem."
+            message= _ "What is this? Their vanquished leader wears a cloak-pin of dwarvish make. And it bears a loremaster’s emblem. Why would an orc be carrying metalwork of dwarvish make?"
+        [/message]
+
+		[scroll_to]
+			x,y=45,29
+		[/scroll_to]
+		
+        [unit]
+            x,y=45,29
+            id=Movrur
+            name= _ "Movrur"
+            {IS_LOYAL}
+            [modifications]
+                {TRAIT_LOYAL}
+            [/modifications]
+            side=1
+            type=Dwarvish Masked Steelclad
+			profile=portraits/maskeddwarf3.png
+            random_traits=no
+			animate=yes
+        [/unit]
+
+        [message]
+            speaker=Movrur
+            message= _ "Hail, kinsmen of Knalga. I have been tracking that orc for several days. He be part of a band of raiders that attacked us a few weeks ago and stole many arms from our forges."
+        [/message]
+
+        [move_unit]
+            id=Movrur
+            to_x,to_y=$x1,$y1
+        [/move_unit]
+
+        [message]
+            speaker=Movrur
+            message= _ "Yes, this cloak-pin be of our work."
         [/message]
 
         [message]
             speaker=Aiglondur
-            message= _ "The maker’s mark is strange to me. We had best consult the lord Hamel."
+            message= _ "Hold... kinsman. Who are you and from where do you hail?"
+        [/message]
+
+        [message]
+            speaker=Movrur
+            message= _ "I be Movrur, of the ancient stronghold of Kal Kartha."
+        [/message]
+
+        [message]
+            speaker=Aiglondur
+            message= _ "Kal Kartha! In that case, we had best consult Lord Hamel. We may yet be able to send you some aid against these orcish marauders."
+        [/message]
+
+        [message]
+            speaker=Movrur
+            message= _ "If you wish it. Let us see what you can offer."
         [/message]
 
         [endlevel]
