--- a/data/campaigns/The_Hammer_of_Thursagan/scenarios/04_Invaders.cfg
+++ b/data/campaigns/The_Hammer_of_Thursagan/scenarios/04_Invaders.cfg
@@ -1,11 +1,11 @@
 #textdomain wesnoth-thot
 
 [scenario]
-    id=05_Invaders
+    id=04_Invaders
     name= _ "Invaders"
-    map_data="{campaigns/The_Hammer_of_Thursagan/maps/05_Invaders.map}"
+    map_data="{campaigns/The_Hammer_of_Thursagan/maps/04_Invaders.map}"
     turns=40
-    next_scenario=06_High_Pass
+    next_scenario=05_Fear
     victory_when_enemies_defeated=yes
 
     {DEFAULT_SCHEDULE}
@@ -22,11 +22,11 @@
         [part]
             {THOT_BIGMAP}
             music=revelation.ogg
-            story= _ "The Alliance’s road ended at the troll bridge. East of it lay only the wildlands."
+            story= _ "The Alliance’s road proceeded north through the hills toward the river Arkan-thoria. Before them lay the treacherous wildlands."
         [/part]
     [/story]
 
-    {THOT_TRACK {JOURNEY_STAGE5}}
+    {THOT_TRACK {JOURNEY_STAGE4}}
 
     # wmllint: validate-off
     [side]
@@ -182,6 +182,10 @@
                 description= _ "Death of Angarthing"
                 condition=lose
             [/objective]
+            [objective]
+                description= _ "Death of Movrur"
+                condition=lose
+            [/objective]
 
             {TURNS_RUN_OUT}
 
@@ -193,6 +197,10 @@
 
         [recall]
             id=Angarthing
+        [/recall]
+		
+		[recall]
+            id=Movrur
         [/recall]
 
         [role]
@@ -349,4 +357,5 @@
 
     {HERODEATH_AIGLONDUR}
     {HERODEATH_ANGARTHING}
+    {HERODEATH_MOVRUR}
 [/scenario]
