Modify resists of giant scorpion and scorpling

--- a/data/core/units/monsters/Giant_Scorpion.cfg
+++ b/data/core/units/monsters/Giant_Scorpion.cfg
@@ -22,6 +22,14 @@
     [/standing_anim]
     hitpoints=40
     movement_type=scuttlefoot
+    [resistance]
+        blade=100
+        pierce=100
+        impact=100
+        fire=100
+        cold=100
+        arcane=80
+    [/resistance]
     movement=8
     experience=50
     level=1
