--- a/data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg
@@ -256,12 +256,12 @@
 
             [else]
                 #Eastern tunnel
-                #to cavewall: 25,4 25,6 26,6 also 26,5 24,4
+                #to cavewall: 25,4 25,6 26,6 also 26,5 24,4 and 25,3 24,2
                 #to shallow water 25,5
 
                 [terrain]
-                    x=24,25,25,26,26
-                    y=4,4,6,5,6
+                    x=24,25,25,26,26,25,24
+                    y=4,4,6,5,6,3,2
                     terrain=Xu
                 [/terrain]
 
