--- a/data/core/about_i18n.cfg
+++ b/data/core/about_i18n.cfg
@@ -1041,6 +1041,13 @@ sort=yes
         name = "kudoh"
     [/entry]
     [entry]
+        name = "Maxwell Stibbard Hawkes"
+    [/entry]
+    [entry]
+        name = "mishan"
+        email = "mishanhideaki88_AT_gmail.com"
+    [/entry]
+    [entry]
         name = "いいむらなおき (amatubu) - Naoki Iimura"
     [/entry]
     [entry]
@@ -1049,10 +1056,6 @@ sort=yes
     [/entry]
     [entry]
         name = "np"
-    [/entry]
-    [entry]
-        name = "mishan"
-        email = "mishanhideaki88_AT_gmail.com"
     [/entry]
     [entry]
         name = "Shoot MORII (pastak)"
