UtBS: Update objectives automatically via [show_if]

--- a/data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg
@@ -179,10 +179,18 @@
         # Set starting scenario objectives
 
         [objectives]
-            summary= _ "Starting Objectives:"
             [objective]
                 description= _ "Kaleh must reach the northern edge of the desert"
                 condition=win
+            [/objective]
+            [objective]
+                description= _ "Defeat outlaw leader"
+                condition=win
+                [show_if]
+                    [have_unit]
+                        id=Thorn
+                    [/have_unit]
+                [/show_if]
             [/objective]
             [objective]
                 description= _ "Death of Kaleh"
@@ -1411,40 +1419,6 @@
         [/message]
         {CLEAR_VARIABLE explorer}
 
-        [objectives]
-            summary= _ "New Objectives:"
-            silent=no
-            [objective]
-                description= _ "Kaleh must reach the northern edge of the desert"
-                condition=win
-            [/objective]
-            [objective]
-                description= _ "Defeat outlaw leader"
-                condition=win
-            [/objective]
-            [objective]
-                description= _ "Death of Kaleh"
-                condition=lose
-            [/objective]
-            [objective]
-                description= _ "Death of Nym"
-                condition=lose
-            [/objective]
-            [objective]
-                description= _ "Death of Garak"
-                condition=lose
-            [/objective]
-            [objective]
-                description= _ "Death of Zhul"
-                condition=lose
-            [/objective]
-
-            [gold_carryover]
-                bonus=yes
-                carryover_percentage=40
-            [/gold_carryover]
-        [/objectives]
-
         [unit]
             side=2
             id=Thorn
@@ -1465,6 +1439,9 @@
             {INCOME 9 11 13}
             {GOLD 100 125 150}
         [/modify_side]
+
+        [show_objectives]
+        [/show_objectives]
     [/event]
 
     # limit recruitment to one bandit and trapper
