--- a/data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg
@@ -336,7 +336,7 @@
 
         [set_variable]
             name=ally_must_live
-            value=1
+            value=yes
         [/set_variable]
 
         [set_variable]
@@ -387,10 +387,33 @@
 
         # set starting scenario objectives
         [objectives]
-            summary= _ "Starting Objectives:"
             [objective]
                 description= _ "Escape the caves"
                 condition=win
+                [show_if]
+                    {VARIABLE_CONDITIONAL ally_must_live boolean_equals yes}
+                [/show_if]
+            [/objective]
+            [objective]
+                description= _ "Explore outside"
+                condition=win
+                [show_if]
+                    [not]
+                        [have_unit]
+                            id=Sergeant Durstrag,Esanoo
+                        [/have_unit]
+                    [/not]
+                    {VARIABLE_CONDITIONAL ally_must_live boolean_equals no}
+                [/show_if]
+            [/objective]
+            [objective]
+                description= _ "Defeat Sergeant Durstrag"
+                condition=win
+                [show_if]
+                    [have_unit]
+                        id=Sergeant Durstrag
+                    [/have_unit]
+                [/show_if]
             [/objective]
             [objective]
                 description= _ "Death of Kaleh"
@@ -408,42 +431,48 @@
                 description= _ "Death of Grog"
                 condition=lose
                 [show_if]
-                    [variable]
-                        name=ally_name
-                        equals=Grog
-                    [/variable]
+                    {VARIABLE_CONDITIONAL ally_name equals "Grog"}
+                    {VARIABLE_CONDITIONAL ally_must_live boolean_equals yes}
                 [/show_if]
             [/objective]
             [objective]
                 description= _ "Death of Nog"
                 condition=lose
                 [show_if]
-                    [variable]
-                        name=ally_name
-                        equals=Nog
-                    [/variable]
+                    {VARIABLE_CONDITIONAL ally_name equals "Nog"}
+                    {VARIABLE_CONDITIONAL ally_must_live boolean_equals yes}
                 [/show_if]
             [/objective]
             [objective]
                 description= _ "Death of Rogrimir"
                 condition=lose
                 [show_if]
-                    [variable]
-                        name=ally_name
-                        equals=Rogrimir
-                    [/variable]
+                    {VARIABLE_CONDITIONAL ally_name equals "Rogrimir"}
+                    {VARIABLE_CONDITIONAL ally_must_live boolean_equals yes}
                 [/show_if]
             [/objective]
             [objective]
                 description= _ "Death of Jarl"
                 condition=lose
                 [show_if]
-                    [variable]
-                        name=ally_name
-                        equals=Jarl
-                    [/variable]
+                    {VARIABLE_CONDITIONAL ally_name equals "Jarl"}
+                    {VARIABLE_CONDITIONAL ally_must_live boolean_equals yes}
                 [/show_if]
             [/objective]
+            [objective]
+                description= _ "A human messenger escapes the valley"
+                condition=lose
+                [show_if]
+                    {VARIABLE_CONDITIONAL messengers_incoming boolean_equals yes}
+                [/show_if]
+            [/objective]
+
+            [note]
+                description= _  "The messenger is the leader of the special white colored units"
+                [show_if]
+                    {VARIABLE_CONDITIONAL messengers_incoming boolean_equals yes}
+                [/show_if]
+            [/note]
 
             [gold_carryover]
                 bonus=yes
@@ -2681,31 +2710,10 @@
                 message= _ "Well, Nym’s right, we don’t know what’s out there. So we should set up a perimeter guard around the cave mouth and start discovering what this side of the mountains looks like."
             [/message]
 
-            [objectives]
-                summary= _ "New Objectives:"
-                silent=no
-                [objective]
-                    description= _ "Explore outside"
-                    condition=win
-                [/objective]
-                [objective]
-                    description= _ "Death of Kaleh"
-                    condition=lose
-                [/objective]
-                [objective]
-                    description= _ "Death of Nym"
-                    condition=lose
-                [/objective]
-                [objective]
-                    description= _ "Death of Zhul"
-                    condition=lose
-                [/objective]
+            {VARIABLE ally_must_live no}
 
-                [gold_carryover]
-                    bonus=yes
-                    carryover_percentage=40
-                [/gold_carryover]
-            [/objectives]
+            [show_objectives]
+            [/show_objectives]
 
             [event]
                 name=new turn
@@ -2763,11 +2771,6 @@
 
     [event]
         name=ally_conversation
-
-        [set_variable]
-            name=ally_must_live
-            value=0
-        [/set_variable]
 
         {MESSAGE_DEPEND_ON_ALLY
         (
@@ -3490,31 +3493,8 @@
             side=2
         [/capture_village]
 
-        [objectives]
-            summary= _ "New Objectives:"
-            silent=no
-            [objective]
-                description= _ "Defeat Sergeant Durstrag"
-                condition=win
-            [/objective]
-            [objective]
-                description= _ "Death of Kaleh"
-                condition=lose
-            [/objective]
-            [objective]
-                description= _ "Death of Nym"
-                condition=lose
-            [/objective]
-            [objective]
-                description= _ "Death of Zhul"
-                condition=lose
-            [/objective]
-
-            [gold_carryover]
-                bonus=yes
-                carryover_percentage=40
-            [/gold_carryover]
-        [/objectives]
+        [show_objectives]
+        [/show_objectives]
 
         [event]
             name=new turn
@@ -3591,46 +3571,16 @@
             message= _ "Then we’ll just have to make sure that no messenger escapes this valley to summon reinforcements."
         [/message]
 
-        [objectives]
-            summary= _ "New Objectives:"
-            silent=no
-            [objective]
-                description= _ "Defeat Sergeant Durstrag"
-                condition=win
-            [/objective]
-            [objective]
-                description= _ "A human messenger escapes the valley"
-                condition=lose
-            [/objective]
-            [objective]
-                description= _ "Death of Kaleh"
-                condition=lose
-            [/objective]
-            [objective]
-                description= _ "Death of Nym"
-                condition=lose
-            [/objective]
-            [objective]
-                description= _ "Death of Zhul"
-                condition=lose
-            [/objective]
-
-            [gold_carryover]
-                bonus=yes
-                carryover_percentage=40
-            [/gold_carryover]
-
-            [note]
-                description= _  "The messenger is the leader of the special white colored units"
-            [/note]
-        [/objectives]
-
         #set messenger timer at 2, so first messenger goes in 6,5,4 turns
 
         [set_variable]
             name=messenger_timer
             value=2
         [/set_variable]
+        {VARIABLE messengers_incoming yes}
+
+        [show_objectives]
+        [/show_objectives]
 
         # schedule events that occur after the humans start fighting
         [event]
@@ -4544,7 +4494,7 @@
 
         {CLEAR_VARIABLE healing_rune1,healing_rune2}
 
-        {CLEAR_VARIABLE messenger_timer}
+        {CLEAR_VARIABLE messenger_timer,messengers_incoming}
     [/event]
 
     # set time for all underground areas to be always night/underground
