--- a/data/campaigns/Under_the_Burning_Suns/scenarios/09_Blood_is_Thicker_Than_Water.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/09_Blood_is_Thicker_Than_Water.cfg
@@ -318,10 +318,28 @@
         # set starting scenario objectives
 
         [objectives]
-            summary= _ "Starting Objectives:"
             [objective]
                 description= _ "Rescue at least two merfolk by turn 16"
                 condition=win
+                [show_if]
+                    {VARIABLE_CONDITIONAL turn_number less_than 16}
+                [/show_if]
+            [/objective]
+            [objective]
+                description= _ "Defeat Tanstafaal and Eloh"
+                condition=win
+                [show_if]
+                    [have_unit]
+                        id=Tanstafaal,Eloh
+                    [/have_unit]
+                [/show_if]
+            [/objective]
+            [objective]
+                description= _ "Capture all 4 human ships"
+                condition=win
+                [show_if]
+                    {VARIABLE_CONDITIONAL capture_ships boolean_equals yes}
+                [/show_if]
             [/objective]
             [objective]
                 description= _ "Three merfolk must survive"
@@ -1908,36 +1926,8 @@
             message= _ "Then we will make do with those few that we have."
         [/message]
 
-        # change scenario objectives
-
-        [objectives]
-            summary= _ "New Objectives:"
-            [objective]
-                description= _ "Defeat Tanstafaal and Eloh"
-                condition=win
-            [/objective]
-            [objective]
-                description= _ "Three merfolk must survive"
-                condition=win
-            [/objective]
-            [objective]
-                description= _ "Death of Kaleh"
-                condition=lose
-            [/objective]
-            [objective]
-                description= _ "Death of Nym"
-                condition=lose
-            [/objective]
-            [objective]
-                description= _ "Death of Zhul"
-                condition=lose
-            [/objective]
-
-            [gold_carryover]
-                bonus=yes
-                carryover_percentage=40
-            [/gold_carryover]
-        [/objectives]
+        [show_objectives]
+        [/show_objectives]
 
         # move tanstafaal to keep
 
@@ -2406,36 +2396,10 @@
             message= _ "Though the cost be high, we do what we must. Come let us go capture those boats."
         [/message]
 
-        # change scenario objectives
+        {VARIABLE capture_ships yes}
 
-        [objectives]
-            summary= _ "New Objectives:"
-            [objective]
-                description= _ "Capture all 4 human ships"
-                condition=win
-            [/objective]
-            [objective]
-                description= _ "Three merfolk must survive"
-                condition=win
-            [/objective]
-            [objective]
-                description= _ "Death of Kaleh"
-                condition=lose
-            [/objective]
-            [objective]
-                description= _ "Death of Nym"
-                condition=lose
-            [/objective]
-            [objective]
-                description= _ "Death of Zhul"
-                condition=lose
-            [/objective]
-
-            [gold_carryover]
-                bonus=yes
-                carryover_percentage=40
-            [/gold_carryover]
-        [/objectives]
+        [show_objectives]
+        [/show_objectives]
 
         # allow player’s elves to recruit units again
         [set_recruit]
@@ -2825,6 +2789,7 @@
         {PLACE_IMAGE "units/transport/galleon.png~RC(magenta>red)~FL()" 9 25}
         {CLEAR_VARIABLE number_merfolk_caged}
         {CLEAR_VARIABLE number_merfolk_deaths}
+        {CLEAR_VARIABLE capture_ships}
     [/event]
 
     {UTBS_INCLUDE utils/deaths.cfg}
