--- a/data/campaigns/Under_the_Burning_Suns/scenarios/11_Battle_for_Zocthanol_Isle.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/11_Battle_for_Zocthanol_Isle.cfg
@@ -367,10 +367,44 @@
         # set starting scenario objectives
 
         [objectives]
-            summary= _ "Starting Objectives:"
             [objective]
                 description= _ "Kaleh must capture a keep"
                 condition=win
+                [show_if]
+                    {VARIABLE_CONDITIONAL keep_reached boolean_equals no}
+                [/show_if]
+            [/objective]
+            [objective]
+                description= _ "Reach the black citadel in the center of the island"
+                condition=win
+                [show_if]
+                    {VARIABLE_CONDITIONAL keep_reached boolean_equals yes}
+                    {VARIABLE_CONDITIONAL found_door   boolean_equals no}
+                [/show_if]
+            [/objective]
+            [objective]
+                description= _ "Defeat enemy leaders, find both keys"
+                condition=win
+                [show_if]
+                    {VARIABLE_CONDITIONAL found_door boolean_equals yes}
+                    [have_unit]
+                        canrecruit=yes
+                        side=2,3
+                    [/have_unit]
+                [/show_if]
+            [/objective]
+            [objective]
+                description= _ "Any unit must reach the black citadel"
+                condition=win
+                [show_if]
+                    {VARIABLE_CONDITIONAL found_door boolean_equals yes}
+                    [not]
+                        [have_unit]
+                            canrecruit=yes
+                            side=2,3
+                        [/have_unit]
+                    [/not]
+                [/show_if]
             [/objective]
             [objective]
                 description= _ "Death of Kaleh"
@@ -783,29 +817,10 @@
             id=jungle_warning
         [/remove_event]
 
-        [objectives]
-            summary= _ "New Objectives:"
-            [objective]
-                description= _ "Reach the black citadel in the center of the island"
-                condition=win
-            [/objective]
-            [objective]
-                description= _ "Death of Kaleh"
-                condition=lose
-            [/objective]
-            [objective]
-                description= _ "Death of Nym"
-                condition=lose
-            [/objective]
-            [objective]
-                description= _ "Death of Zhul"
-                condition=lose
-            [/objective]
+        {VARIABLE keep_reached yes}
 
-            [gold_carryover]
-                carryover_percentage=0
-            [/gold_carryover]
-        [/objectives]
+        [show_objectives]
+        [/show_objectives]
 
         # change the music playing
         [music]
@@ -923,29 +938,8 @@
 
                 {VARIABLE found_door yes}
 
-                [objectives]
-                    summary= _ "New Objectives:"
-                    [objective]
-                        description= _ "Defeat enemy leaders, find both keys"
-                        condition=win
-                    [/objective]
-                    [objective]
-                        description= _ "Death of Kaleh"
-                        condition=lose
-                    [/objective]
-                    [objective]
-                        description= _ "Death of Nym"
-                        condition=lose
-                    [/objective]
-                    [objective]
-                        description= _ "Death of Zhul"
-                        condition=lose
-                    [/objective]
-
-                    [gold_carryover]
-                        carryover_percentage=0
-                    [/gold_carryover]
-                [/objectives]
+                [show_objectives]
+                [/show_objectives]
             [/else]
         [/if]
     [/event]
@@ -972,29 +966,8 @@
             message= _ "We’ve found both keys. Now we just have to take them and open the door to the black citadel. I tire of all this bloodshed. Wherever Yechnagoth hides, we will find her and make her pay for all she has done."
         [/message]
 
-        [objectives]
-            summary= _ "New Objectives:"
-            [objective]
-                description= _ "Any unit must reach the black citadel"
-                condition=win
-            [/objective]
-            [objective]
-                description= _ "Death of Kaleh"
-                condition=lose
-            [/objective]
-            [objective]
-                description= _ "Death of Nym"
-                condition=lose
-            [/objective]
-            [objective]
-                description= _ "Death of Zhul"
-                condition=lose
-            [/objective]
-
-            [gold_carryover]
-                carryover_percentage=0
-            [/gold_carryover]
-        [/objectives]
+        [show_objectives]
+        [/show_objectives]
         [remove_shroud]
             [filter_side]
                 side=1
@@ -1072,7 +1045,7 @@
         [if]
             [variable]
                 name=found_door
-                numerical_equals=yes
+                boolean_equals=yes
             [/variable]
 
             [then]
@@ -1468,6 +1441,7 @@
         )}
 
         {CLEAR_VARIABLE found_door}
+        {CLEAR_VARIABLE keep_reached}
     [/event]
 
     # create bats at dusk function
