--- a/data/campaigns/Under_the_Burning_Suns/scenarios/12_The_Final_Confrontation.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/12_The_Final_Confrontation.cfg
@@ -253,10 +253,23 @@
         # set starting scenario objectives
 
         [objectives]
-            summary= _ "Starting Objectives:"
             [objective]
                 description= _ "Defeat the false Eloh"
                 condition=win
+                [show_if]
+                    [have_unit]
+                        id=Eloh
+                    [/have_unit]
+                [/show_if]
+            [/objective]
+            [objective]
+                description= _ "Defeat Yechnagoth"
+                condition=win
+                [show_if]
+                    [have_unit]
+                        id=Yechnagoth
+                    [/have_unit]
+                [/show_if]
             [/objective]
             [objective]
                 description= _ "Death of Kaleh"
@@ -905,19 +918,8 @@
             message= _ "It must have some sort of weak point. Look at those pulsing spires, I thought they were stone, but they seem to be alive. Maybe if we destroy them it will weaken the creature. No matter what horrors appear, we must keep attacking it. We can’t stop now!"
         [/message]
 
-        [objectives]
-            summary= _ "New Objectives:"
-            [objective]
-                description= _ "Defeat Yechnagoth"
-                condition=win
-            [/objective]
-            [objective]
-                description= _ "Death of Kaleh"
-                condition=lose
-            [/objective]
-
-            {IS_LAST_SCENARIO}
-        [/objectives]
+        [show_objectives]
+        [/show_objectives]
 
         # Start spawning minions, increasing the number each turn.
         {VARIABLE number_minions_to_spawn 1}
